fix: missing vertical gap

--- a/src/app/roadmap-view/roadmap-view.component.scss
+++ b/src/app/roadmap-view/roadmap-view.component.scss
@@ -38,6 +38,9 @@
 
 ol {
   margin-top: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 
   li {
     position: relative;
